--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <section class="weather-app">
         <article class="search-bar">
           <form action="">
-            <input type="search" placeholder="Enter a city" />
+            <input type="search" placeholder="Enter a city" id="search-field" />
             <input type="submit" value="Go" />
           </form>
         </article>
@@ -26,7 +26,7 @@
           <div>
             <h1 class="search-city">City Name</h1>
             <p class="city-details">
-              Day Time, weather details <br />
+              <span id="current-date"></span>, weather details <br />
               Humidity: <strong>00%</strong>, Wind: <strong>0.0km/h</strong>
             </p>
           </div>
