API connected to search bar

--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
           </form>
         </article>
         <article class="weather-results">
-          <div>
+          <div class="weather-results-text">
             <h1 class="search-city">City Name</h1>
             <p class="city-details">
               <span id="current-date"></span
               ><span id="current-description"></span><br />
-              Humidity: <strong>00%</strong>, Wind: <strong>0.0km/h</strong>
+              Humidity: <strong id="humidity">00%</strong>, Wind:
+              <strong id="wind">0.0m/s</strong>
             </p>
           </div>
           <div class="current-temperature">
