--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="src/global.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+    <link rel="manifest" href="site.webmanifest" />
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Permanent+Marker&display=swap"
       rel="stylesheet"
@@ -29,12 +33,12 @@
             <p class="city-details">
               <span id="current-date"></span
               ><span id="current-description"></span><br />
-              Humidity: <strong id="humidity">00%</strong>, Wind:
-              <strong id="wind">0.0m/s</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind"></strong>
             </p>
           </div>
           <div class="current-temperature">
-            <span class="temperature-icon">☀️</span>
+            <div id="icon"></div>
             <span class="temperature-value">00</span>
             <sup class="temperature-unit">°C</sup>
           </div>
@@ -57,7 +61,10 @@
     </main>
     <footer>
       This project was coded by
-      <a href="https://github.com/jade0x">Jade Garafola</a>
+      <a href="https://github.com/jade0x">Jade Garafola</a>, code hosted on
+      <a href="https://github.com/jade0x/weather-app">GitHub</a> and website
+      hosted on
+      <a href="https://imaginative-twilight-02fc4f.netlify.app/">Netlify</a>
     </footer>
   </body>
   <script src="src/index.js"></script>
