Removed filler text for a clean display

--- a/index.html
+++ b/index.html
@@ -29,18 +29,16 @@
         </article>
         <article class="weather-results">
           <div class="weather-results-text">
-            <h1 class="search-city">City Name</h1>
+            <h1 class="search-city"></h1>
             <p class="city-details">
-              <span id="current-date"></span
-              ><span id="current-description"></span><br />
-              Humidity: <strong id="humidity"></strong>, Wind:
-              <strong id="wind"></strong>
+              <span id="current-date"></span><br />
+              <span id="current-description"></span>
             </p>
           </div>
           <div class="current-temperature">
             <div id="icon"></div>
-            <span class="temperature-value">00</span>
-            <sup class="temperature-unit">°C</sup>
+            <span class="temperature-value"></span>
+            <sup class="temperature-unit"></sup>
           </div>
         </article>
         <article>
