--- a/index.html
+++ b/index.html
@@ -41,66 +41,10 @@
             <sup class="temperature-unit"></sup>
           </div>
         </article>
-        <article class="forecast-container">
+        <article class="forecast-container" id="forecast">
           <div>
             7 day forecast
-            <div class="forecast-result">
-              <div class="forecast-date">Monday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-            <div class="forecast-result">
-              <div class="forecast-date">Tuesday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-            <div class="forecast-result">
-              <div class="forecast-date">Wednesday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-            <div class="forecast-result">
-              <div class="forecast-date">Thursday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-            <div class="forecast-result">
-              <div class="forecast-date">Friday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-            <div class="forecast-result">
-              <div class="forecast-date">Saturday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-            <div class="forecast-result">
-              <div class="forecast-date">Sunday</div>
-              <div class="forecast-icon">⛅</div>
-              <div class="temperature-group">
-                <div class="high-temp"><strong>30°</strong></div>
-                <div class="low-temp">14°</div>
-              </div>
-            </div>
-          </div>
+            
         </article>
       </section>
     </main>
