Connected Forecast temperatures & icon, css for icons not yet adjusted

--- a/index.html
+++ b/index.html
@@ -41,11 +41,7 @@
             <sup class="temperature-unit"></sup>
           </div>
         </article>
-        <article class="forecast-container" id="forecast">
-          <div>
-            7 day forecast
-            
-        </article>
+        <article class="forecast-container" id="forecast"></article>
       </section>
     </main>
     <footer>
