Search bar padding

--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
       <section class="weather-app">
         <article class="search-bar">
           <form action="">
-            <input type="search" placeholder="Enter a city" id="search-field" />
+            <input
+              type="text"
+              placeholder="Enter a city..."
+              id="search-field"
+            />
             <input type="submit" value="Go" />
           </form>
         </article>
