Added header, slowed placeholder animation

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <header></header>
     <main>
       <section class="weather-app">
+        <h1>Should I Go Outside?</h1>
         <article class="search-bar">
           <form action="">
             <input
@@ -50,7 +51,7 @@
     </main>
     <footer>
       This project was coded by
-      <a href="https://github.com/jade0x">Jade Garafola</a>, code hosted on
+      <a href="https://github.com/jade0x">Jade Garafola</a>, is open-sourced on
       <a href="https://github.com/jade0x/weather-app">GitHub</a> and website
       hosted on
       <a href="https://imaginative-twilight-02fc4f.netlify.app/">Netlify</a>
